tests/ui/traits/trait-upcasting/deref-upcast-behavioral-change.stderr
error: this `Deref` implementation is covered by an implicit supertrait coercion
  --> $DIR/deref-upcast-behavioral-change.rs:17:1
   |
LL | impl<'a> Deref for dyn Foo + 'a {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `dyn Foo` implements `Deref<Target = dyn Bar<u32>>` which conflicts with supertrait `Bar<i32>`
...
LL |     type Target = dyn Bar<u32> + 'a;
   |     -------------------------------- target type is a supertrait of `dyn Foo`
   |
   = warning: this will change its meaning in a future release!
   = note: for more information, see issue #89460 <https://github.com/rust-lang/rust/issues/89460>
note: the lint level is defined here
  --> $DIR/deref-upcast-behavioral-change.rs:1:9
   |
LL | #![deny(deref_into_dyn_supertrait)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

